--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -16,10 +16,10 @@
   /* ******************************************** */
   /* ******************************** MAIN HEADER */
   #header-nav {
-    margin-top: 7%;
+  /*  margin-top: 7%;*/
   }
   #collapsed-menu {
-    margin-top: 3.3%;
+    /*margin-top: 3.3%;*/
   }
 
   /* ******************************** */
@@ -59,7 +59,7 @@
   #portfolio img,
   #portfolio .details-wrapper {
     width: 34vw;
-    height: 34vw;
+    height: 100%;
   }
   #portfolio img {
     height: auto;
@@ -301,7 +301,7 @@
   /* ************************ CONTACT */
   #contact {
     /* = total - header - footer */
-    min-height: calc(100vh - 139px - 100px);
+    min-height: calc(100vh - 111px - 100px);
   }
   #contact .responsive_headline .sub-header {
     width: 76%;
@@ -319,21 +319,78 @@
     text-align: right;
     font-size: 1.05em;
   }
+  #contact .responsive_headline .sub-header {
+    float: none;
+    width: 93%;
+    margin: auto;
+  }
 
   #contact .responsive_headline hr {
     margin-top: 0;
   }
   #contact .responsive_headline p {
-    font-size: .3em;
+    font-size: .5em;
   }
 
   /* ******************************************** */
   /* ************************************* FOOTER */
+  /* stack and center */
+  /* breaks under 190px */
+  footer {
+    text-align: center;
+  }
   footer p {
     padding: 0;
     font-size: .65em;
   }
-  #social {
+  footer p.centered.left,
+  footer #social.centered.right {
+    position: static;
+    display: inline-block;
+    float: none;
+    margin: 4% 0;
     padding: 0;
+    transform: none;
   }
 }
+
+/* ////////////////////////////////////////////////////////////////////// */
+/* ///////////////////////////////////////?///////// MAX WIDTH 350px //// */
+@media screen and (max-width: 350px) {
+  /* ******************************** */
+  /* *************************** LOGO */
+  /* center logo and one size only */
+  #logo.big {
+    display: block;
+    float: none;
+    width: 29%;
+    margin: 2.5% auto;
+  }
+
+  /* ******************************** */
+  /* *********************** MENU NAV */
+  #header-nav {
+    font-size: .6em;
+  }
+  #header-nav a {
+    padding: 30px 21px; /* breaks under 226px */
+  }
+
+  /* ******************************** */
+  /* ************************ CONTACT */
+  #contact .sub-header p {
+    font-size: .5em;
+  }
+  #contact .responsive_headline .s-header-two {
+    width: 92%;
+    margin-right: -8%;
+    font-size: 2em;
+    line-height: 1;
+    word-wrap: break-word;
+  }
+}
+
+
+
+
+
